[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/canvas.png" type="Texture" id=1]
[ext_resource path="res://Sprites/aww2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/aww1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/crosshair.png" type="Texture" id=4]
[ext_resource path="res://Scenes/2.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 124, 148 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/ARIAL.TTF"

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/ARIAL.TTF"

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[node name="aww" type="Node2D"]
script = ExtResource( 5 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 628, 288 )
scale = Vector2( 2.3819, 1.44516 )
texture = ExtResource( 1 )

[node name="AwwArea" type="Area2D" parent="."]
position = Vector2( 640, 340 )
collision_mask = 2

[node name="Aww" type="AnimatedSprite" parent="AwwArea"]
scale = Vector2( 2, 2 )
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AwwArea"]
position = Vector2( 12, 8 )
shape = SubResource( 2 )

[node name="saying" type="Label" parent="."]
margin_left = 358.0
margin_top = 128.0
margin_right = 924.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 6 )
text = "Heh, You know I had to do it to em"

[node name="AwwHealth" type="Label" parent="."]
margin_left = 8.0
margin_right = 210.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 4 )
text = "Aww549 Health: 10"
valign = 1

[node name="Crosshair" type="Sprite" parent="."]
position = Vector2( -200, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="AwwArea" to="." method="_on_AwwArea_mouse_entered"]
[connection signal="mouse_exited" from="AwwArea" to="." method="_on_AwwArea_mouse_exited"]
